2004-11-12  MenTaLguY  <mental@rydia.net>

	* src/main.cpp: fpresetsticky -> fpsetsticky

	* src/verbs.cpp: cast width changes

	* src/libnrtype/FlowBoxes.h, src/libnrtype/FlowDefs.h,
	  src/libnrtype/FlowDest.h, src/libnrtype/FlowEater.h,
	  src/libnrtype/FlowRes.h, src/libnrtype/FlowSols.h,
	  src/libnrtype/FlowSrc.h, src/libnrtype/FlowSrcText.h,
	  src/libnrtype/FlowStyle.h, src/libnrtype/FlowUtils.h:
	  remove stdint.h which isn't being used here

	* src/widgets/icon.h, src/widgets/icon.cpp:
	  icon greys out when insensitive

2004-11-11  Kees Cook  <kees@outflux.net>

    * src/seltrans.cpp, src/select-context.cpp: ref counting SPObjects
	  correctly so undo's don't blow up an active resize/move.  Closes
	  bug #1018756.

2004-11-11  MenTaLguY  <mental@rydia.net>

	* src/inkscape.cpp, src/main.cpp, src/widgets/icon.cpp:
	  removed sp_bitmap_icons

	* configure.ac, src/sp-image.cpp, src/object-ui.cpp:
	  removed stale autotrace support code

2004-11-10  MenTaLguY  <mental@rydia.net>

	* src/sp-item.cpp, src/sp-clippath.cpp, src/cp-mask.cpp:
	  minor refcounting tweaks

	* src/sp-image.cpp: fixed failure to release GdkPixbufLoader when
	  done with it (fixes bug #1063054)

2004-11-10  Kees Cook  <kees@outflux.net>

	* configure.ac, src/gc-core.h: corrected gc.h path detection.

2004-11-09  MenTaLguY  <mental@rydia.net>

	* src/dialogs/fileselector.cpp: fixed cut-and-paste refcount bug
	  between SVGPreview::setFileName and SVGPreview::setFromMem that
	  was leaking bitmap image preview SPDocuments

2004-11-09  Bryce Harrington <bryce@bryceharrington.org>

	* src/dialogs/item-properties.cpp

2004-11-09  MenTaLguY  <mental@rydia.net>

	* src/sp-item.cpp, src/style.cpp, src/style.h:
	  use 'display' rather than 'visibility' for hiding, and give display
	  a more "modern" representation in SPStyle like visibility's

2004-11-09  Kees Cook  <kees@outflux.net>

	* src/dialogs/xml-tree.cpp: added better context to the status bar.
	  added warning flash for id conflicts.